--- a/EkreaticeSnacks/Scenes/Login/Interface/LoginViewController.storyboard
+++ b/EkreaticeSnacks/Scenes/Login/Interface/LoginViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="928-E7-PFL">
             <objects>
-                <viewController id="1UP-rf-JgS" customClass="LoginViewController" customModule="EkreaticeSnacks" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="1UP-rf-JgS" customClass="LoginViewController" customModule="EkreaticeSnacks" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GXk-uo-mNx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,23 +40,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MtZ-vN-nPN"/>
                     </view>
-                    <connections>
-                        <segue destination="uil-ZO-C8E" kind="show" id="15G-3b-0dw"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JD8-oE-jgw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32" y="121"/>
-        </scene>
-        <!--Storyboard Reference-->
-        <scene sceneID="2ll-0m-jNc">
-            <objects>
-                <viewControllerPlaceholder id="uil-ZO-C8E" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="fpE-zU-NGe"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ARD-kj-NZN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="763" y="79"/>
         </scene>
     </scenes>
 </document>
